# tourguide-agent

./: .gitignore  ARTICLE.md  README.md  conversation_content.json  docker-compose.yml
ai-agent/: .env.example  AGENTS.md  pyproject.toml
ai-agent/app/: config.py  container.py  di.py  main.py  redis_client.py
ai-agent/app/agent/: agent.py  agent_graph.py  graph.py  state.py
ai-agent/app/agent/contracts/: agent_interface.py
ai-agent/app/agent/nodes/: planner.py  researcher.py  synthesizer.py
ai-agent/app/agent/tools/: geocoding.py  geocoding_tool.py  mcp_client.py  mcp_tools.py  places.py  places_tool.py  rest_tools.py  tool_client_factory.py  tool_client_interface.py  tools.py
ai-agent/app/configs/: settings.py
ai-agent/app/events/: rabbitmq_consumer.py
ai-agent/app/events/contracts/: chat_interface.py  consumer_message.py
ai-agent/app/events/handlers/: chat_event_handler.py
ai-agent/app/routers/: chat.py  chat_router.py  tour.py
ai-agent/app/routers/contracts/: chat.py  chat_interface.py
ai-agent/app/schemas/: chat.py  tour.py
ai-agent/app/services/: chat_manager.py  chat_service.py  redis_client.py  redis_helper.py
ai-agent/infra/: Dockerfile.dev
backend/: .env.example  AGENTS.md  package-lock.json  package.json  tsconfig.json
frontend/: AGENTS.md  (+2 more)
mcp-server/: .env.example  pyproject.toml
mcp-server/app/: container.py  fast_mcp.py  main.py
mcp-server/app/configs/: settings.py
mcp-server/app/routers/: tools_router.py
mcp-server/app/routers/contracts/: tool_interface.py
mcp-server/app/tools/: geocoding_tool.py  places_tool.py
(+30 files in other folders)
